--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
-quarkusPluginId=io.quarkus
+#Fri Sep 23 01:09:23 NOVT 2022
 quarkusPluginVersion=2.12.2.Final
-quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
+quarkusPluginId=io.quarkus
+quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformVersion=2.12.2.Final
