--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ quarkus.datasource.username = root
 quarkus.datasource.password = ocqic-Yicoq-ppOc2-ivum
 quarkus.datasource.reactive.url = mysql://localhost:3306/interviews
 quarkus.datasource.jdbc=false
+
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.jdbc.statement-batch-size=5
