--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,14 @@ quarkus.datasource.jdbc=false
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.jdbc.statement-batch-size=5
+
+quarkus.native.resources.includes=JWTSecret.jwk
+smallrye.jwt.verify.key.location=JWTSecret.jwk
+smallrye.jwt.verify.key-format=JWK
+smallrye.jwt.verify.algorithm=HS256
+smallrye.jwt.always-check-authorization=true
+mp.jwt.token.header=Cookie
+mp.jwt.token.cookie=token
+
+quarkus.log.category."io.quarkus.smallrye.jwt.runtime.auth.MpJwtValidator".level=TRACE
+quarkus.log.category."io.quarkus.smallrye.jwt.runtime.auth.MpJwtValidator".min-level=TRACE
