add endpoint routing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,7 @@ smallrye.jwt.always-check-authorization=true
 mp.jwt.token.header=Cookie
 mp.jwt.token.cookie=token
 
+quarkus.log.level=DEBUG
+quarkus.log.min-level=DEBUG
 quarkus.log.category."io.quarkus.smallrye.jwt.runtime.auth.MpJwtValidator".level=TRACE
 quarkus.log.category."io.quarkus.smallrye.jwt.runtime.auth.MpJwtValidator".min-level=TRACE
