--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,15 @@ quarkus.datasource.jdbc=false
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.jdbc.statement-batch-size=5
+quarkus.hibernate-orm.log.sql=true
 
-quarkus.native.resources.includes=JWTSecret.jwk
-smallrye.jwt.verify.key.location=JWTSecret.jwk
-smallrye.jwt.verify.key-format=JWK
-smallrye.jwt.verify.algorithm=HS256
-smallrye.jwt.always-check-authorization=true
-mp.jwt.token.header=Cookie
-mp.jwt.token.cookie=token
+#quarkus.native.resources.includes=JWTSecret.jwk
+#smallrye.jwt.verify.key.location=JWTSecret.jwk
+#smallrye.jwt.verify.key-format=JWK
+#smallrye.jwt.verify.algorithm=HS256
+#smallrye.jwt.always-check-authorization=true
+#mp.jwt.token.header=Cookie
+#mp.jwt.token.cookie=token
 
-quarkus.log.level=DEBUG
-quarkus.log.min-level=DEBUG
+#quarkus.log.level=DEBUG
+#quarkus.log.min-level=DEBUG
