--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #Gradle properties
 #Tue Nov 01 13:15:24 NOVT 2022
-quarkusPluginVersion=2.12.2.Final
+quarkusPluginVersion=2.14.0.CR1
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPluginId=io.quarkus
 quarkusPlatformGroupId=io.quarkus.platform
-quarkusPlatformVersion=2.12.2.Final
+quarkusPlatformVersion=2.14.0.CR1
